Fix color contrast on links within Firefox homepage banner (Fixes #5820)

--- a/media/css/mozorg/home/home-2018.scss
+++ b/media/css/mozorg/home/home-2018.scss
@@ -85,6 +85,10 @@ $callout-blue: #0060df;
     margin-top: $margin-lg;
 }
 
+.download-button {
+    @include light-links;
+}
+
 @media #{$media-md} {
     #download-primary {
         margin-top: 0;
